--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,23 @@
   font-family: "Custom";
   src: url("/fonts/Pelavin Fonts - SaltyDog-Solid.otf");
 }
+
+body {
+  overflow: auto;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Edge, Opera and Firefox */
+
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
+@media screen and (max-width: 480px) {
+  body {
+     /* max-height: 100vh; */
+     overflow-y: hidden;
+  }
+}
