--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,21 +8,13 @@
 }
 
 body {
-  overflow: auto;
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                supported by Chrome, Edge, Opera and Firefox */
-
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  overflow: hidden;
+  height: 100vh;
 }
 
 @media screen and (max-width: 480px) {
   body {
-     /* max-height: 100vh; */
-     overflow-y: hidden;
+    /* max-height: 100vh; */
+    overflow-y: hidden;
   }
 }
